# videomind-ai

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Phase9_Theme_Prompt.md  README.md  VideoMind_AI_Prompt.md  context.md  docker-compose.yml  memory.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/dependencies/: services.py
app/api/routes/: chat.py  health.py  search.py  video.py
app/api/schemas/: search.py  video.py
app/core/: config.py  constants.py  exceptions.py  logging.py  network.py
app/domain/: entities.py  interfaces.py
app/embeddings/: _default_models.py  bge_model.py  registry.py  service.py
app/generation/: context_builder.py  llm_service.py  prompt_builder.py
app/repositories/: in_memory_transcript_repository.py  in_memory_vector_repository.py  in_memory_video_repository.py  postgres_transcript_repository.py  postgres_video_repository.py  qdrant_vector_repository.py  sqlite_transcript_repository.py  sqlite_video_repository.py  transcript_repository.py  vector_repository.py  video_repository.py
app/retrieval/: dense.py  hybrid.py  reranker.py  sparse.py
app/speech/: chunker.py  language_detection.py  whisper_service.py
app/use_cases/: chat_with_video.py  ingest_video.py  search_video.py
app/video/: extractor.py  frames.py  metadata.py  processor.py
app/vision/: easy_ocr.py  object_detector.py  ocr_service.py  paddle_ocr.py  scene_analyzer.py
docs/: ADR_Phase1_Architecture.md
frontend/: Dockerfile  app.py  theme.py
frontend/components/: cards.py  player.py  skeleton.py  status.py
infra/: run_migrations.py
infra/migrations/: 0001_create_tables.sql  0002_add_video_status.sql
infra/sqlite_migrations/: 0001_create_tables.sql
tests/: conftest.py
tests/unit/: test_bge_model.py  test_chunker.py  test_config.py  test_constants.py  test_core_config.py  test_core_constants.py  test_core_exceptions.py  test_core_logging.py  test_dependencies.py  test_embeddings.py  test_entities.py  test_exceptions.py  test_generation.py  test_health.py  test_health_endpoints.py  test_in_memory_repositories.py  test_in_memory_transcript_repository.py  test_ingest_usecase.py  test_language_detection.py  test_logging.py  test_object_detector.py  test_ocr_service.py  test_postgres_repositories.py  test_qdrant_adapter.py  test_qdrant_repository.py  test_repositories.py  test_retrieval.py  test_routes.py  test_scene_analyzer.py  test_sqlite_repositories.py  test_video_processing.py  test_video_processor_orchestrator.py  test_video_routes.py  test_whisper_service.py
