[project]
name = "videomind-ai"
version = "0.1.0"
description = "Multi-modal video intelligence platform — query videos via natural language."
requires-python = ">=3.9"

# =============================================================================
# Pytest configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"          # pytest-asyncio: auto-detect async tests
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: fast, isolated unit tests (no external services)",
    "integration: tests that require Docker stack to be running",
]

# =============================================================================
# Ruff — linter + formatter
# =============================================================================
[tool.ruff]
target-version = "py39"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ANN",  # flake8-annotations (type hints enforcement)
]
ignore = [
    "ANN101",  # Missing type annotation for `self`
    "ANN102",  # Missing type annotation for `cls`
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

# =============================================================================
# isort — import sorting (backup if ruff.lint.isort is not used)
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
force_sort_within_sections = true

# =============================================================================
# mypy — static type checking
# =============================================================================
[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true   # Third-party stubs may be absent
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",              # Tested via TestClient
    "*/__init__.py",
    # Phase 3 stubs (implemented in Phase 3)
    "app/video/frames.py",
    "app/video/metadata.py",
    # Phase 4 stubs
    "app/speech/language_detection.py",
    # Phase 5 stubs
    "app/vision/object_detector.py",
    "app/vision/scene_analyzer.py",
    # Phase 6 stubs — DB repositories
    "app/repositories/postgres_*.py",
    "app/repositories/qdrant_*.py",
    "app/repositories/sqlite_*.py",
    "app/repositories/video_repository.py",
    "app/repositories/transcript_repository.py",
    "app/repositories/vector_repository.py",
    # Phase 7 stubs
    "app/retrieval/dense.py",
    "app/retrieval/hybrid.py",
    "app/retrieval/reranker.py",
    # Phase 8 stubs
    "app/generation/prompt_builder.py",
    "app/generation/context_builder.py",
    "app/generation/llm_service.py",
    # Phase 8 use case stub
    "app/use_cases/chat_with_video.py",
    "app/use_cases/search_video.py",
    # Phase 6 DI stubs (no logic yet)
    "app/api/dependencies/services.py",
    # Phase 9 schemas (no routes yet)
    "app/api/schemas/video.py",
    "app/api/schemas/search.py",
    # Infrastructure
    "app/core/network.py",
]

[tool.coverage.report]
show_missing = true
# Progressive coverage targets:
#   Phase 2:  50%  (core + domain only, stubs excluded)
#   Phase 6:  65%  (+ video, speech, vision, embeddings)
#   Phase 9:  75%  (+ retrieval, generation, routes)
#   Phase 10: 80%  (full test suite)
fail_under = 50
