[project]
name = "videomind-ai"
version = "0.1.0"
description = "Multi-modal video intelligence platform — query videos via natural language."
requires-python = ">=3.9"

[project.dependencies]
rank-bm25 = "^0.2.2"
sentence-transformers = "^2.2.2"

# =============================================================================
# Pytest configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"          # pytest-asyncio: auto-detect async tests
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: fast, isolated unit tests (no external services)",
    "integration: tests that require Docker stack to be running",
]

# =============================================================================
# Ruff — linter + formatter
# =============================================================================
[tool.ruff]
target-version = "py39"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking (renamed from TCH)
    "ANN",  # flake8-annotations (type hints enforcement)
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "TC001",   # Move app import into TYPE_CHECKING — adds overhead without benefit here
    "TC002",   # Move third-party import into TYPE_CHECKING — numpy/PIL used at runtime
    "N812",    # Lowercase `functional` as `F` — standard torch/torchvision convention
    "E501",    # Line too long
    "B904",    # raise ... from e
    "SIM115",  # Use a context manager for opening files
    "SIM117",  # Nested with statements
    "UP006",   # Use dict instead of Dict
    "UP035",   # typing.Dict is deprecated
    "ANN",     # Missing type annotations
    "B008",    # Do not perform function calls in argument defaults (FastAPI depends)
    "SIM105",  # Use contextlib.suppress instead of try/except/pass
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]
"frontend/**/*.py" = ["ANN"]


[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

# =============================================================================
# isort — import sorting (backup if ruff.lint.isort is not used)
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
force_sort_within_sections = true

# =============================================================================
# mypy — static type checking
# =============================================================================
[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true   # Third-party stubs may be absent
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",              # Tested via TestClient
    "*/__init__.py",
    # Phase 9 use case stub
    "app/use_cases/search_video.py",
    # Phase 9 schemas (no routes yet)
    "app/api/schemas/video.py",
    "app/api/schemas/search.py",
    # Infrastructure
    "app/core/network.py",
]

[tool.coverage.report]
show_missing = true
# Progressive coverage targets:
#   Phase 2:  50%  (core + domain only, stubs excluded)
#   Phase 6:  65%  (+ video, speech, vision, embeddings)
#   Phase 7:  67%  (+ retrieval layer)
#   Phase 8:  68%  (+ generation layer)
#   Phase 9:  75%  (+ routes)
#   Phase 10: 80%  (full test suite)
fail_under = 80
